feat: add panorama editing and album layouts (#160)
